# fairsharer

./: pyproject.toml
.github/workflows/: python-ci.yaml
src/fairsharer/: fairsharer.py
tests/: test_fairsharer.py
